temp fix for hamburger menu icon on mobile

--- a/jekyll/assets/css/header-center.css
+++ b/jekyll/assets/css/header-center.css
@@ -207,11 +207,12 @@
 
 /* Ensure menu-icon only shows SVG, no unwanted glyphs */
 .menu-icon {
-  display: inline-block;
   font-size: 0;
   line-height: 0;
   width: 18px;
   height: 15px;
+  padding-top: 0;
+  float: none;
   vertical-align: middle;
   display: flex;
   align-items: center;
@@ -254,6 +255,16 @@
 
 /* Mobile nav collapse styles */
 @media screen and (max-width: 600px) {
+  .site-header .site-nav > label[for="nav-trigger"] {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .site-header .site-nav .menu-icon {
+    transform: translateY(-9px);
+  }
+
   .site-header .wrapper {
     flex-direction: column;
     align-items: center;
